--- a/variables.env
+++ b/variables.env
@@ -1,10 +1,10 @@
 NODE_ENV=development
 DATABASE=mongodb://masjid:masjid@ds137230.mlab.com:37230/masjid-ng
-MAIL_USER=123
-MAIL_PASS=123
-MAIL_HOST=mailtrap.io
+MAIL_USER=9e9398a7-68fa-48b0-8f7a-61dd38f3f968
+MAIL_PASS=9e9398a7-68fa-48b0-8f7a-61dd38f3f968
+MAIL_HOST=smtp.postmarkapp.com
 MAIL_PORT=2525
 PORT=7777
-MAP_KEY=AIzaSyD9ycobB5RiavbXpJBo0Muz2komaqqvGv0
+MAP_KEY=AIzaSyDYR9DcaOBKel3cRyxN5d2tJPhTUDyh0FA
 SECRET=snickers
 KEY=sweetsesh
