--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "faker": "4.1.0",
     "forever": "0.15.3",
     "git-assert-clean": "^1.0.0",
+    "git-clean": "0.0.9",
     "glob": "7.1.1",
     "html-to-text": "3.2.0",
+    "i": "^0.3.6",
     "is-git-clean": "^1.1.0",
     "jimp": "0.2.27",
     "juice": "4.0.2",
